frontend/main.scss
$neutral-color: #888;
$bright-color: rgb(227,48,27);
$light-background-color: #eee;
$separator-color: #ccc;

@font-face {
  font-family: 'srk-condensed';
  src: url('/static/fonts/srk-cond-regular.woff2') format('woff2'),
       url('/static/fonts/srk-cond-regular.woff') format('woff');
  font-weight: 400;
  font-style: normal;
}

body {
  font-family: 'srk-condensed', sans-serif;
}

header {
  display: flex;
  justify-content: flex-end;
  padding: 20px;
}

#logo {
  width: auto;
  height: 3em;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.search {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.search-bar {
  display: flex;
  font-size: 1.5em;
  border: 1px solid $neutral-color;
  border-radius: 15px;
  padding: 10px;
  width: 100%;
  box-sizing: border-box;
}

.search, .results {
  width: 80%;
  max-width: 800px;
}

.search {
  margin-bottom: 2em;
}

.results-status {
  text-align: center;
  color: $neutral-color;
  padding: 1em;
}

details > summary { list-style-type: none; }
detauls > details summary::-webkit-details-marker { display: none; }
details > summary::marker { display: none; }

.package {
  display: inline-block;
  border: 1px solid $neutral-color;
  border-radius: 3px;
  margin: 3px;
}

.package[open] {
  margin-bottom: 2em;
  display: block;
}

.package > summary {
  padding: 5px;
  cursor: pointer;
}

.package > summary:hover {
  background: $bright-color;
  color: white;
}

.package[open] > summary {
  font-size: 1.5em;
  font-weight: bold;
}

.package > summary:focus {
  outline: inherit;
}

.package > summary:focus:not(:hover) {
  background: #333;
  color: white;
}

#search-field {
  border: 0;
  font-family: monospace;
  font-size: inherit;
  width: 100%;
  box-sizing: border-box;
}

#search-field:focus {
  outline: none;
}

#glass {
  width: 1em;
  height: auto;
  margin-right: 10px;
}

a, a:visited {
  color: $neutral-color;
}

a:hover {
  color: $bright-color;
}

.match {
  background-color: $bright-color;
  color: white;
}

.line-number {
  user-select: none;
  font-family: monospace;
  background: $light-background-color;
  color: $neutral-color;
  padding: 3px;
  text-align: right;
}

.line {
  padding-left: 10px;
}

.result-code {
  border-collapse: collapse;
}

h3 {
  margin: 0;
}

hr {
  border: none;
  border-top: 1px solid $separator-color;
  color: $separator-color;
  height: 0;
}

.result {
  padding: 1em;
  overflow-x: scroll;
}

.package, .result {
  animation: fadein 0.5s;
}

@keyframes fadein {
  from { opacity: 0 }
  to   { opacity: 1 }
}

.omission-bar {
  border-top: 1px dashed $separator-color;
}

.error {
  display: inline-block;
  white-space: pre;
  font-family: monospace;
  border: 1px solid $bright-color;
  border-radius: 3px;
  padding: 5px;
}

